# xlnscpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  REQUIREMENTS.md  matmul_fp32.cpp  summation16bit.MD  test16inf.cpp  test32inf.cpp  xlns16.cpp  xlns16_32montetest.cpp  xlns16_32rndtest.cpp  xlns16_32test.cpp  xlns16_explog_test.cpp  xlns16_new_functions_test.cpp  xlns16exptbl.h  xlns16gencvtbl.cpp  xlns16gensbdb.cpp  xlns16gensigmoidtbl.cpp  xlns16logtbl.h  xlns16monte.cpp  xlns16monte_bylpvip.cpp  xlns16revcvtbl.h  xlns16revgencvtbl.cpp  xlns16sigmoidtbl.h  xlns16test.cpp  xlns32.cpp  xlns32_new_functions_test.cpp  xlns32lpvip.cpp
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: build-and-test.yml  compile-smoke.yml  labeler.yml  python-checks.yml  stale.yml
benchmarks/: CMakeLists.txt
cmake/: ConfigTest.cmake
cmake/modules/: xlnsConfig.cmake.in
docs/: BUILD.md  TESTING_CHECKLIST.md
examples/basic_usage/: CMakeLists.txt  main.cpp
include/xlns/: xlns.h  xlns16.h  xlns32.cpp  xlns32.h
include/xlns/tables/: xlns16_cvtbl.h  xlns16_revcvtbl.h  xlns16_sbdbtbl.h  xlns32_tbl.h
scripts/: dblptest.py  dbtest.py  sblptest.py  sbtest.py  test_compilers.sh  validate_build.sh
src/: CMakeLists.txt  xlns16.cpp  xlns32.cpp
test/: CMakeLists.txt  time16_benchmark.cpp  xlns16_funtest.cpp  xlns16_test.cpp  xlns32_funtest.cpp  xlns32_test.cpp  xlns_both_test.cpp
test/benchmark/: time16_benchmark.cpp
test/functional/: xlns16_funtest.cpp  xlns32_funtest.cpp
test/unit/: xlns16_test.cpp  xlns16_testcase.h  xlns32_test.cpp  xlns_both_test.cpp
tests/: CMakeLists.txt  xlns16_batch_layernorm_test.cpp  xlns16_cmp_util_const_test.cpp  xlns16_explog_test.cpp  xlns16_scalar_vector_test.cpp  xlns32_batch_layernorm_test.cpp  xlns32_cmp_util_const_test.cpp  xlns32_explog_test.cpp
tools/: CMakeLists.txt  db16.cpp  dbmit16.cpp  sb16.cpp  sbmit16.cpp
